gitops/env-app/routes/ttk-backend-httproute.yaml
# TTK backend + spec API
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ttk-backend
  namespace: mojaloop
spec:
  parentRefs:
    - name: gw-int
      namespace: platform-system
  hostnames:
    - "ttk-backend.int.${domain}"
  rules:
    - backendRefs:
        - name: moja-ml-testing-toolkit-backend
          port: 5050
